<resources>
    <string name="app_name">Net Bank</string>
    <string name="email">Email</string>
    <string name="reg">Create Account</string>

    <string name="invinp">Invalid Input</string>
    <string name="emlerr">Email doesn\'t seem right</string>
    <string name="error">Something went wrong.</string>
    <string name="matcherr">Password do not match</string>
    <string name="accerr">Account number invalid</string>
    <string name="mobileinv">Mobile no invalid</string>
    <string name="otp">Enter OTP here</string>
    <string name="inv_amt">Invalid amount</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LOGIN</string>
    <string name="adderr">Address is invalid</string>
    <string name="action_settings">Logout</string>
    <string name="secure">"🔒 Secure"</string>

    <!--App Intro Strings-->
    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The easiest way to operate your bank account from your smartphone!</string>
    <string name="slide_2_title">Statements</string>
    <string name="slide_2_desc">Request your account statement and check balance on the go!</string>
    <string name="slide_3_title">Fund Transfer</string>
    <string name="slide_3_desc">Transfer funds quick and easy way!</string>
    <string name="slide_4_title">FDR</string>
    <string name="slide_4_desc">Also create FDR easily in just a few taps!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Login Register Strings-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="userid">User ID</string>
    <string name="pass">Password</string>
    <string name="fpass">Forgot Password</string>
    <string name="tnc">I agree with all the terms and conditions.</string>
    <string name="emptyfield">This field cannot be empty</string>
    <string name="recog">Cannot recognize the User ID</string>
    <string name="invalid">Invalid User ID or Password.</string>

    <!-- About Fragment Strings -->
    <string name="mail">info@netbank.in</string>
    <string name="devs">D e v e l o p e r s</string>
    <string name="Prithvi">Prithvi Chavhan</string>
    <string name="Rohan">Rohan Dhamapurkar</string>
    <string name="institute">I n s t i t u t e</string>
    <string name="watumull">Watumull Institute</string>

    <!-- Bill Fragment Strings -->
    <string name="bill_type">"S e l e c t   B i l l   T y p e"</string>
    <string name="bill_amt">Enter Bill Amount</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="electricity">Electricity</string>
    <string name="telephone">Telephone</string>
    <string name="water">Water</string>

    <!--FDR-->
    <string name="reqFDR">Request FDR</string>
    <string name="interest">Interest Rate: </string>

</resources>
